--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,12 @@ jobs:
     script: echo "doing insights stuff"
   - stage: Deploy
     script: echo "doing standalone stuff"
+    provider: releases
+    api_key: "GITHUB OAUTH TOKEN"
+    file: "FILE TO UPLOAD"
+    skip_cleanup: true
+    on:
+      tags: true
 
 
 
