--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,10 @@ jobs:
   - stage: Deploy
     script: echo "doing insights stuff"
   - stage: Deploy
-    script: echo "doing standalone stuff"
+    script: npm run build-standalone && tar -czvf ui-release.tar.gz dist/
     provider: releases
     api_key: "GITHUB OAUTH TOKEN"
-    file: "FILE TO UPLOAD"
+    file: "/ui-release.tar.gz"
     skip_cleanup: true
     on:
       tags: true
