--- a/.travis.yml
+++ b/.travis.yml
@@ -40,8 +40,8 @@ jobs:
       - export TRAVIS_TAG=dev
       # - git tag -f $TRAVIS_TAG
       # - git push -q https://$TAGPERM@github.com/ansible/ansible-hub-ui --tags
-      - npm run build-standalone
-      - tar -C dist/ -czvf automation-hub-ui-dist.tar.gz .
+      # - npm run build-standalone
+      - tar -C src/ -czvf automation-hub-ui-dist.tar.gz .
     deploy:
       provider: releases
       file: automation-hub-ui-dist.tar.gz
