Insights - fix window title (#1799)
Issue: AAH-1439

--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,7 @@
   },
   globals: {
     // overridden in test/.eslintrc
+    APPLICATION_NAME: "readonly",
     NAMESPACE_TERM: "readonly",
   },
   rules: {
