--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,7 @@ coverage
 # testing
 test/cypress/screenshots/*
 test/cypress/videos/*
+test/cypress/downloads/*
 test/cypress.env.json
 test/results
 test/cypress/fixtures/example.json
