--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,6 +12,14 @@ updates:
 
   - package-ecosystem: 'npm'
     directory: '/'
+    target-branch: 'stable-4.5'
+    schedule:
+      interval: 'weekly'
+    commit-message:
+      prefix: '[stable-4.5] '
+
+  - package-ecosystem: 'npm'
+    directory: '/'
     target-branch: 'stable-4.4'
     schedule:
       interval: 'weekly'
@@ -22,7 +30,7 @@ updates:
     directory: '/'
     target-branch: 'stable-4.3'
     schedule:
-      interval: 'weekly'
+      interval: 'monthly'
     commit-message:
       prefix: '[stable-4.3] '
 
@@ -30,6 +38,6 @@ updates:
     directory: '/'
     target-branch: 'stable-4.2'
     schedule:
-      interval: 'weekly'
+      interval: 'monthly'
     commit-message:
       prefix: '[stable-4.2] '
