Update to use v3 apis instead of legacy ; collection test fix (#1974)
* Update to use v3 apis instead of legacy ; collection test fix

from https://github.com/pulp/pulp_ansible/blob/main/pulp_ansible/app/urls.py#L43

No-Issue

* fix collection-list test in galaxykit

https://github.com/ansible/galaxykit/pull/42

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: "Install galaxykit dependency"
       run: |
-        pip install git+https://github.com/ansible/galaxykit.git
+        pip install git+https://github.com/himdel/galaxykit.git@v3-plugin-ansible
 
     - name: "Set env.SHORT_BRANCH, env.GALAXY_NG_COMMIT"
       run: |
