cypress, pr-checks: enable on feature/* branches (#1979)
also disable commit check on non-master

No-Issue

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -2,12 +2,13 @@ name: "PR checks"
 
 on:
   pull_request:
-    branches: [ 'master', 'stable-*' ]
+    branches: [ 'master', 'stable-*', 'feature/*' ]
 
 jobs:
 
   check_commit:
     runs-on: ubuntu-latest
+    if: ${{ github.base_ref == 'master' }}
     steps:
 
     - name: Checkout code
