--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -4,9 +4,9 @@ on:
   # allow running manually
   workflow_dispatch:
   pull_request:
-    branches: [ 'master', 'stable-*' ]
+    branches: [ 'master', 'stable-*', 'feature/*' ]
   push:
-    branches: [ 'master', 'stable-*' ]
+    branches: [ 'master', 'stable-*', 'feature/*' ]
   # daily on master
   schedule:
   - cron: '30 5 * * *'
