--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
         "@lingui/macro": "^3.13.3",
         "@ls-lint/ls-lint": "^1.11.0",
         "@redhat-cloud-services/frontend-components-config": "^4.6.6",
+        "@redhat-cloud-services/frontend-components-config-utilities": "^1.5.17",
         "@typescript-eslint/eslint-plugin": "^5.21.0",
         "@typescript-eslint/parser": "^5.20.0",
         "babel-core": "^7.0.0-bridge.0",
