webpack-config PR check - ignore insights dev mode hashes in output (#2033)
webpack-config check fails on meaningless differences in insights dev mode...

     cloning ci-beta branch of https://github.com/redhatinsights/landing-page-frontend-build
    -16a87a3f6f91ec8299c270e75d38be2a16cc184cbefa260184590b263b82ec62
    +24a89956405a35b5cd913853ef62404b584378732abb805d209f55d1d083447e

skip those hashes before comparison

No-Issue

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -126,6 +126,7 @@ jobs:
               sed -e 's/\/home\/.*\/\(base\|pr\)\//\/DIR\//g' \
                 -e 's/\(\[name\]\|automationHub\)\.[0-9]\+\.\(\[fullhash\]\)/\1.TIMESTAMP.\2/g' \
                 -e 's/"UI_COMMIT_HASH": ".*"/"UI_COMMIT_HASH": "HASH"/' |
+              perl -ne 'print unless /^[0-9a-f]{64,64}$/d' |
               grep -v '^Current branch:' |
               grep -v '^Root folder:' > ~/webpack-config/"$version"/"$file".json
           done
