l10n: enable korean for extract&compile as well (#2037)
follow up to #2031

No-Issue

--- a/.linguirc
+++ b/.linguirc
@@ -4,6 +4,6 @@
     "include": ["<rootDir>/src"]
   }],
   "format": "po",
-  "locales": ["en", "es", "fr", "nl", "ja", "zh"],
+  "locales": ["en", "es", "fr", "ko", "nl", "ja", "zh"],
   "sourceLocale": "en"
 }
