--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "@patternfly/react-core": "^4.214.1",
         "@patternfly/react-table": "^4.83.1",
         "@redhat-cloud-services/frontend-components-utilities": "^3.2.10",
-        "@types/node": "^14.18.20",
+        "@types/node": "^16.11.39",
         "@types/react": "^16.14.26",
         "@types/react-dom": "^16.9.15",
         "@types/react-router-dom": "^5.3.3",
@@ -108,7 +108,7 @@
         }
     },
     "engines": {
-        "node": ">=12, <15",
-        "npm": "<7"
+        "node": ">=16",
+        "npm": ">=8"
     }
 }
