--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "@patternfly/react-core": "^4.221.3",
         "@patternfly/react-table": "^4.83.1",
         "@redhat-cloud-services/frontend-components-utilities": "^3.2.10",
-        "@types/node": "^18.0.0",
+        "@types/node": "^16.11.41",
         "@types/react": "^16.14.24",
         "@types/react-dom": "^16.9.14",
         "@types/react-router-dom": "^5.3.3",
@@ -103,7 +103,7 @@
         "appname": "automation-hub"
     },
     "engines": {
-        "node": ">=12, <15",
-        "npm": "<7"
+        "node": ">=16",
+        "npm": ">=8"
     }
 }
