Drop master-stable, deploy stage-stable from master conditionally (#2308)
* Drop master-stable, deploy stage-stable from master conditionally

Before:
* cloud-stage-cron periodically pushes master to master-stable when $flag
* master-stable push triggers stage-stable deploy (but the cron one actually doesn't because of actions not triggering actions)
* master push triggers stage-beta deploy
* cloud-stage-{enable,disable} set $flag

After:
* master push triggers stage-beta deploy
* master push ALSO triggers stage-stable deploy *when $flag*
* cloud-stage-{enable,disable} set $flag
(no master-stable branch, no cloud-stage-cron action)

This means stage-stable updates together with stage-beta unless paused,
but it also means that it won't update when unpaused until a new PR is merged.
(deploy-cloud can still be triggered manually)

No-Issue

* custom_release: stop pushing to ci-beta and ci-stable (now only qa- and prod-)

* rename cloud-stage workflows to match

* README: drop ci- branches, update console stage url

--- a/.github/workflows/cloud-stage-disable.yml
+++ b/.github/workflows/cloud-stage-disable.yml
@@ -1,4 +1,4 @@
-name: "Disable periodic stage deploy"
+name: "Disable automatic stage-stable deploy on push to master"
 
 on:
   workflow_dispatch: # allow running manually
