Cypress: install galaxykit 0.8.0 (#2412)
0.8.0 is the last release without rbac, switching to that one until feature/rbac-roles is merged
this allows us to start merging rbac PRs in galaxykit main

No-Issue

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -26,7 +26,8 @@ jobs:
 
     - name: "Install galaxykit dependency"
       run: |
-        pip install git+https://github.com/ansible/galaxykit.git
+        # FIXME(rbac): pip install git+https://github.com/ansible/galaxykit.git
+        pip install galaxykit==0.8.0
 
     - name: "Set env.SHORT_BRANCH, env.GALAXY_NG_COMMIT"
       run: |
