Feature/rbac roles (#2239)
* Role list view (#1860)

* create role list view
* roleAPI
* updates exports for roleAPI
* update roleList paths
* add table
* add item to table headers and implement rolelisttable in role-list component.
* add permission chip selector
* update RoleAPI and role-list-view
* fix EmptyStateFilter
* delete function role delete
* update roleAPI
* initialize createRole UI page
* role create functions
* formatting
* changelog entry
* rework editRole path
* add description to create role component
* get description field working in create role ui
* update name and description state in role edit component
* implement saveRole function in role-edit component
* error handing on edit role page
* adding error handling to create and edit pages
* add DateComponent to list view
* remove extra loading spinner
* Add tooltip to locked roles
* add sorting to created at column
* drop unused createRole method
* use helper text
* remove extraneous code in maperrormessages.tsx
* cleanup UX on edit role page
* fix UX on role create form
* get redirect and tooltips working
* add filtering for galaxy. roles only
* work with mapErrorMessages error
* additional form input validation
* finalize form validation
* cleanup compound filters
* reusable role-form
* role-edit parent component
* properly type nameValidated and descriptionValidated
* tighten up the mapErrors method for network error handling.
* remove extra import and use just one <Form> component in RoleForm
* include galaxy__starts_with in UI
* rework validateInput functions
* move validateINput and mapNetworkErros to util
* move role functions to containers/role-management

Issue: AAH-1131

* Rework groups view (#1797)

* Rework groups view
* Fix params issues
* fix requests spam
* fix group_management test
* add allSettled promise
* comment out and skip permissions related tests
* add api changes and fixes
* fix translation
* update changes
* fi

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -27,7 +27,7 @@ jobs:
     - name: "Install galaxykit dependency"
       run: |
         # FIXME(rbac): pip install git+https://github.com/ansible/galaxykit.git
-        pip install galaxykit==0.8.0
+        pip install git+https://github.com/himdel/galaxykit.git@object_roles
 
     - name: "Set env.SHORT_BRANCH, env.GALAXY_NG_COMMIT"
       run: |
