--- a/test/cypress.env.json.template
+++ b/test/cypress.env.json.template
@@ -1,5 +1,6 @@
 {
   "prefix": "/api/automation-hub/",
+  "pulpPrefix":"/api/automation-hub/pulp/api/v3/",
   "username": "admin",
   "password": "admin",
   "settings": "../../galaxy_ng/galaxy_ng/app/settings.py",
