[stable-4.5] Cypress: install galaxykit from pypi, not github (#1969)
* Cypress: install galaxykit from pypi, not github

the idea being a stable branch should use a released version of galaxykit, specifically 0.8.0, the last version before rbac
(patching out wait_for_task because deletion doesn't return a task until 4.6+)

No-Issue

--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -26,7 +26,7 @@ jobs:
 
     - name: "Install galaxykit dependency"
       run: |
-        pip install git+https://github.com/himdel/galaxykit.git@v3-plugin-ansible
+        pip install galaxykit==0.8.0
 
     - name: "Set env.SHORT_BRANCH, env.GALAXY_NG_COMMIT"
       run: |
@@ -190,6 +190,12 @@ jobs:
     - name: "Check initial feature flags"
       run: |
         curl -s -u admin:admin http://localhost:8002/api/galaxy/_ui/v1/feature-flags/ | jq
+
+    # galaxykit#53 turns out to be incompatible with 4.5, but already released in 0.8.0, patching out
+    - name: "Patch galaxykit"
+      run: |
+        sed -i -e '/def wait_for_task/,$d' ~/.local/lib/python*/site-packages/galaxykit/utils.py
+        ( echo 'def wait_for_task(client, task):' ; echo '    return task' ) >> ~/.local/lib/python*/site-packages/galaxykit/utils.py
 
     - name: "Run cypress"
       working-directory: 'ansible-hub-ui/test'
