--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -8,5 +8,8 @@
     "describe": "readonly",
     "expect": "readonly",
     "it": "readonly"
+  },
+  "rules": {
+    "@typescript-eslint/no-var-requires": "off"
   }
 }
