deploy-cloud, base config: add explicit deployment config to build stage-stable and stage-beta both from master (#2522)
npm run deploy reads the current branch name (in cloud mode) and decides to build a beta version when the branch is master
but since #2308, we're deploying to stage-stable as well
leading to issues on stage-stable:

    Loading chunk 849 failed. (error: https://console.stage.redhat.com/beta/apps/automation-hub/js/849.1661953046888.a80f84b3e77abc4bde6d.js)

adding a HUB_CLOUD_BETA env var to override the autodetection,
and building with HUB_CLOUD_BETA=true for stage-beta, HUB_CLOUD_BETA=false for stage-stable,
and no override for prod builds, as before.

No-Issue

--- a/.github/workflows/deploy-cloud.yml
+++ b/.github/workflows/deploy-cloud.yml
@@ -58,4 +58,4 @@ jobs:
       run: |
         npm cache verify
         npm ci || npm install
-        npm run deploy && curl -sSL https://raw.githubusercontent.com/RedHatInsights/insights-frontend-builder-common/master/src/bootstrap.sh | bash -s
+        curl -sSL https://raw.githubusercontent.com/RedHatInsights/insights-frontend-builder-common/master/src/bootstrap.sh | bash -s
