Update README, dependabot, i18n config for stable-4.6 existence (#2621)
* dependabot - enable for 4.6

* README: AAP AAH version mapping

* i18n workflow: enable for stable-4.6

* README: list 4.6

No-Issue

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,6 +12,14 @@ updates:
 
   - package-ecosystem: 'npm'
     directory: '/'
+    target-branch: 'stable-4.6'
+    schedule:
+      interval: 'weekly'
+    commit-message:
+      prefix: '[stable-4.6] '
+
+  - package-ecosystem: 'npm'
+    directory: '/'
     target-branch: 'stable-4.5'
     schedule:
       interval: 'weekly'
