--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -16,6 +16,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/labeler@v4
-      if: ${{ github.event.pull_request.user.login != "dependabot[bot]" }}
+      if: ${{ github.event.pull_request.user.login != 'dependabot[bot]' }}
       with:
         repo-token: "${{ secrets.GITHUB_TOKEN }}"
