--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -7,6 +7,7 @@ name: "Add labels to pull request"
 on:
   pull_request_target:
     branches: [ "master" ]
+    types: [ "opened" ]
 
 jobs:
   triage:
