resolve build and ephemeral issues with frontend container (#2334)
* Update frontend config
* remove .dockerignore during frontend build
* set proper frontend image tag during pr-check
* update node version for frontend container build

Issue: AAH-1598

--- a/deploy/frontend.yaml
+++ b/deploy/frontend.yaml
@@ -32,6 +32,10 @@ objects:
           href: "/ansible/automation-hub/repositories"
           product: "Ansible Automation Hub"
         - appId: "automationHub"
+          title: "Task Management"
+          href: "/ansible/automation-hub/tasks"
+          product: "Ansible Automation Hub"
+        - appId: "automationHub"
           title: "Connect to Hub"
           href: "/ansible/automation-hub/token"
           product: "Ansible Automation Hub"
