npm run lint-setup,lint-fix (#2817)
put linter deps in the same place, run via `npm run lint-setup`

also adding `npm run lint-fix` to run all the lint:*:fix scripts

No-Issue

--- a/.github/workflows/pr-checks.yml
+++ b/.github/workflows/pr-checks.yml
@@ -52,7 +52,7 @@ jobs:
         popd
 
         # dependencies
-        pip install lint-po yamllint
+        npm run lint-setup
 
         # run linters
         npm run lint
