--- a/package.json
+++ b/package.json
@@ -81,13 +81,17 @@
         "gettext:compile": "lingui compile",
         "gettext:extract": "lingui extract",
         "lint": "npm-run-all lint:*",
+        "lint-fix": "npm-run-all lint:*:fix",
+        "lint-setup": "npm-run-all lint:*:setup",
         "lint:js": "npm run prettier:check && npm run eslint",
         "lint:js:fix": "npm run eslint:fix && npm run prettier",
         "lint:ls": "ls-lint",
         "lint:po": "lint-po locale/*.po",
+        "lint:po:setup": "pip install --upgrade lint-po",
         "lint:sass": "stylelint 'src/**/*.scss' --config .stylelintrc.json",
         "lint:ts": "tsc",
         "lint:yaml": "yamllint .",
+        "lint:yaml:setup": "pip install --upgrade yamllint",
         "prettier": "prettier --write 'src/**' 'config/**' 'test/**'",
         "prettier:check": "prettier -l 'src/**' 'config/**' 'test/**'",
         "start": "NODE_ENV=development webpack serve --host 0.0.0.0 --config config/insights.dev.webpack.config.js",
