--- a/.github/workflows/automerge.yml
+++ b/.github/workflows/automerge.yml
@@ -1,33 +1,26 @@
 name: Automerge
 
 on:
-  # allow running manually
-  workflow_dispatch:
   pull_request:
     branches: [ 'master', 'stable-*', 'feature/*' ]
 
 jobs:
-  Automerge:
+  automerge:
+    if: github.actor == 'dependabot[bot]'
     runs-on: ubuntu-latest
-    env:
-      GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
     steps:
 
     - name: "Checkout ansible-hub-ui (${{ github.ref }})"
       uses: actions/checkout@v3
-      with:
-        path: 'ansible-hub-ui'
 
     - name: "Install node 16"
       uses: actions/setup-node@v3
       with:
         node-version: '16'
 
-    - name: "run the automerge.js"
+    - name: "Run automerge.js"
+      working-directory: ".github/workflows"
+      env:
+        GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
-        echo "branch: ${{ github.head_ref }}"
-        echo "PR name:  ${{ github.event.pull_request.title }}"
-        echo "Actor:  ${{ github.actor }}"
-        cd ./ansible-hub-ui/.github/workflows
         node automerge.js "${{ github.head_ref }}" "${{ github.event.pull_request.title }}" "${{ github.actor }}"
