Insights tests - add uiPrefix, rename prefix to apiPrefix (#2897)
* Cypress.env - apiPrefix, uiPrefix

* Cypress.env("prefix") -> apiPrefix

* /ui/... -> uiPrefix

* CI cypress.env: set uiPrefix

Issue: AAH-1271

* drop unused getUrl

* pulpPrefix: consistency

* uiPrefix, apiPrefix, pulpPrefix - use template strings

* fixup envs w/ pulpPrefix

--- a/test/cypress.env.json.template
+++ b/test/cypress.env.json.template
@@ -1,6 +1,7 @@
 {
-  "prefix": "/api/automation-hub/",
+  "apiPrefix": "/api/automation-hub/",
   "pulpPrefix": "/api/automation-hub/pulp/api/v3/",
+  "uiPrefix": "/ui/",
   "username": "admin",
   "password": "admin",
   "settings": "../../galaxy_ng/galaxy_ng/app/settings.py",
